feat: individual product page css done

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 
 <body>
     <!-- Header -->
-    <header>
+    <header id="header-index">
         <img src="/image/atelier-logo.svg" alt="Logo Atelier">
 
         <div id="bar-header"></div>
+
+        <img class="picture" src="/image/test.png" alt="Photo intérieur de l'Atelier">
+
     </header>
 
     <!-- Section images -->
-    <img class="picture" src="/image/test.png" alt="Photo intérieur de l'Atelier">
 
     <!-- Prices -->
     <div>
