--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
         <img src="/image/atelier-logo.svg" alt="Logo Atelier">
 
         <div id="bar-header"></div>
-
-        <img class="picture" src="/image/test.png" alt="Photo intérieur de l'Atelier">
-
     </header>
 
     <!-- Section images -->
+    <img class="picture" src="/image/test.png" alt="Photo intérieur de l'Atelier">
 
     <!-- Prices -->
     <div>
@@ -121,21 +119,21 @@
                 <p id="name">Forfait - Permanente</p>
                 <p id="price">78 € / 89 €</p>
             </div>
-            <p id="info">(Shampooing, Coupe, Permanente, avec ou sans ammoniaque, Brush)</p>
+            <p id="haircut-info">(Shampooing, Coupe, Permanente, avec ou sans ammoniaque, Brush)</p>
             <div id="little-bar"></div>
 
             <div class="line">
                 <p id="name">Coupe Adolescente -18 ans</p>
                 <p id="price">38 €</p>
             </div>
-            <p id="info">(Cheveux courts)</p>
+            <p id="haircut-info">(Cheveux courts)</p>
             <div id="little-bar"></div>
 
             <div class="line">
                 <p id="name">Coupe Enfant -10 ans</p>
                 <p id="price">19 €</p>
             </div>
-            <p id="info">(Cheveux longs sur devis)</p>
+            <p id="haircut-info">(Cheveux longs sur devis)</p>
         </div>
 
         <div class="hidden" id="men-price">
@@ -192,7 +190,7 @@
                 <p id="name">Forfait Permanente</p>
                 <p id="price">66 €</p>
             </div>
-            <p id="info">(Shampooing, Coupe, Permanente, Coiffage)</p>
+            <p id="haircut-info">(Shampooing, Coupe, Permanente, Coiffage)</p>
         </div>
     </div>
 
@@ -224,8 +222,8 @@
             <div class="product">
                 <img id="product-image" src="/image/products/produit3.webp" alt="Produit">
                 <div class="line-product">
-                    <p id="name">L'Oréal</p>
-                    <p id="price">27 €</p>
+                    <p id="brand-product">L'Oréal</p>
+                    <p id="price-product">27 €</p>
                 </div>
                 <p class="info" id="describe1">Neutralisateur anti-jaunissement</p>
                 <p class="info" id="describe2">Pour cheveux blonds ou méchés</p>
