feat: font + change some id/class to naming convention

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/index.css" rel="stylesheet">
     <link href="/css/global.css" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet">
     <title>L'Atelier 12</title>
 </head>
 
@@ -14,7 +14,6 @@
     <!-- Header -->
     <header id="header-index">
         <img src="/image/atelier-logo.svg" alt="Logo Atelier">
-
         <div id="bar-header"></div>
     </header>
 
@@ -32,106 +31,106 @@
         <div class="visible" id="women-price">
 
             <div class="line">
-                <p id="name">Coupe - Brushing</p>
-                <p id="price">41 € / 44 € / 49 €</p>
+                <p class="name">Coupe - Brushing</p>
+                <p class="price">41 € / 44 € / 49 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Shampooing - Brushing</p>
-                <p id="price">22 € / 24 € / 29 € / 34 €</p>
+                <p class="name">Shampooing - Brushing</p>
+                <p class="price">22 € / 24 € / 29 € / 34 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Soin</p>
-                <p id="price">6 € / 10 €</p>
+                <p class="name">Soin</p>
+                <p class="price">6 € / 10 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Mousse</p>
-                <p id="price">6 €</p>
+                <p class="name">Mousse</p>
+                <p class="price">6 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Couleur</p>
-                <p id="price">38 €</p>
+                <p class="name">Couleur</p>
+                <p class="price">38 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Couleur sans ammoniaque</p>
-                <p id="price">43 €</p>
+                <p class="name">Couleur sans ammoniaque</p>
+                <p class="price">43 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Shampooing - Américain</p>
-                <p id="price">38 €</p>
+                <p class="name">Shampooing - Américain</p>
+                <p class="price">38 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Couleur Semi - Permanente</p>
-                <p id="price">33 €</p>
+                <p class="name">Couleur Semi - Permanente</p>
+                <p class="price">33 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Dose supplémenaire</p>
-                <p id="price">10 €</p>
-            </div>
-
-            <br>
-            <br>
-
-            <div class="line">
-                <p id="name">Flash</p>
-                <p id="price">19 € / 29 €</p>
+                <p class="name">Dose supplémenaire</p>
+                <p class="price">10 €</p>
             </div>
 
             <br>
             <br>
 
             <div class="line">
-                <p id="name">Décoloration Cheveux court</p>
-                <p id="price">58 €</p>
-            </div>
-            <div id="little-bar"></div>
-
-            <div class="line">
-                <p id="name">Décapage</p>
-                <p id="price">33 €</p>
-            </div>
-            <div id="little-bar"></div>
-
-            <div class="line">
-                <p id="name">Balayage</p>
-                <p id="price">48 € / 62 € / 72 €</p>
+                <p class="name">Flash</p>
+                <p class="price">19 € / 29 €</p>
             </div>
 
             <br>
             <br>
 
             <div class="line">
-                <p id="name">Forfait - Permanente</p>
-                <p id="price">78 € / 89 €</p>
+                <p class="name">Décoloration Cheveux court</p>
+                <p class="price">58 €</p>
+            </div>
+            <div class="little-bar"></div>
+
+            <div class="line">
+                <p class="name">Décapage</p>
+                <p class="price">33 €</p>
+            </div>
+            <div class="little-bar"></div>
+
+            <div class="line">
+                <p class="name">Balayage</p>
+                <p class="price">48 € / 62 € / 72 €</p>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="line">
+                <p class="name">Forfait - Permanente</p>
+                <p class="price">78 € / 89 €</p>
             </div>
             <p id="haircut-info">(Shampooing, Coupe, Permanente, avec ou sans ammoniaque, Brush)</p>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Coupe Adolescente -18 ans</p>
-                <p id="price">38 €</p>
+                <p class="name">Coupe Adolescente -18 ans</p>
+                <p class="price">38 €</p>
             </div>
             <p id="haircut-info">(Cheveux courts)</p>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Coupe Enfant -10 ans</p>
-                <p id="price">19 €</p>
+                <p class="name">Coupe Enfant -10 ans</p>
+                <p class="price">19 €</p>
             </div>
             <p id="haircut-info">(Cheveux longs sur devis)</p>
         </div>
@@ -139,56 +138,56 @@
         <div class="hidden" id="men-price">
 
             <div class="line">
-                <p id="name">Shampooing Brushing</p>
-                <p id="price">19 €</p>
+                <p class="name">Shampooing Brushing</p>
+                <p class="price">19 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Coupe</p>
-                <p id="price">26 €</p>
+                <p class="name">Coupe</p>
+                <p class="price">26 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Coupe Adolescent -18 ans</p>
-                <p id="price">24 €</p>
+                <p class="name">Coupe Adolescent -18 ans</p>
+                <p class="price">24 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Coupe Enfant -10 ans</p>
-                <p id="price">19 €</p>
+                <p class="name">Coupe Enfant -10 ans</p>
+                <p class="price">19 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Taille de Barbe</p>
-                <p id="price">8 €</p>
+                <p class="name">Taille de Barbe</p>
+                <p class="price">8 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Couleur</p>
-                <p id="price">33 € / 38 €</p>
+                <p class="name">Couleur</p>
+                <p class="price">33 € / 38 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Shampooing Américain</p>
-                <p id="price">25 €</p>
+                <p class="name">Shampooing Américain</p>
+                <p class="price">25 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Balayage</p>
-                <p id="price">35 € / 45 € / 55 €</p>
+                <p class="name">Balayage</p>
+                <p class="price">35 € / 45 € / 55 €</p>
             </div>
-            <div id="little-bar"></div>
+            <div class="little-bar"></div>
 
             <div class="line">
-                <p id="name">Forfait Permanente</p>
-                <p id="price">66 €</p>
+                <p class="name">Forfait Permanente</p>
+                <p class="price">66 €</p>
             </div>
             <p id="haircut-info">(Shampooing, Coupe, Permanente, Coiffage)</p>
         </div>
@@ -202,8 +201,8 @@
             <div class="product">
                 <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
                 <div class="line-product">
-                    <p id="name">L'Oréal</p>
-                    <p id="price">24 €</p>
+                    <p class="name">L'Oréal</p>
+                    <p class="price">24 €</p>
                 </div>
                 <p class="info" id="describe1">Rénovateur de longueurs</p>
                 <p class="info" id="describe2">Pour cheveux longs</p>
@@ -212,8 +211,8 @@
             <div class="product">
                 <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
                 <div class="line-product">
-                    <p id="name">L'Oréal</p>
-                    <p id="price">20 €</p>
+                    <p class="name">L'Oréal</p>
+                    <p class="price">20 €</p>
                 </div>
                 <p class="info" id="describe1">Restructurant instantané</p>
                 <p class="info" id="describe2">Pour cheveux secs et abimés</p>
@@ -239,7 +238,7 @@
         <h1>Avis</h1>
         <div class="block">
             <div class="avis">
-                <h3 class="name"></h3>
+                <p id="name">JE stestezf</p>
                 <img id="star" src="/image/icon/star.svg">
                 <img src="/image/icon/star.svg">
                 <img src="/image/icon/star.svg">
@@ -262,42 +261,42 @@
 
     <!-- Open -->
     <div class="place">
-        <div class="hour">
+        <div class="hours">
             <h2>Horaires d'ouvertures</h2>
 
             <div class="line-hours">
-                <p id="day">Lundi</p>
-                <p id="hour">Fermé</p>
+                <p class="day">Lundi</p>
+                <p class="hour">Fermé</p>
             </div>
 
             <div class="line-hours">
-                <p id="day">Mardi</p>
-                <p id="hour">9:00 - 18:00</p>
+                <p class="day">Mardi</p>
+                <p class="hour">9:00 - 18:00</p>
             </div>
 
             <div class="line-hours">
-                <p id="day">Mercredi</p>
-                <p id="hour">9:00 - 18:00</p>
+                <p class="day">Mercredi</p>
+                <p class="hour">9:00 - 18:00</p>
             </div>
 
             <div class="line-hours">
-                <p id="day">Jeudi</p>
-                <p id="hour">9:00 - 18:00</p>
+                <p class="day">Jeudi</p>
+                <p class="hour">9:00 - 18:00</p>
             </div>
 
             <div class="line-hours">
-                <p id="day">Vendredi</p>
-                <p id="hour">9:00 - 18:00</p>
+                <p class="day">Vendredi</p>
+                <p class="hour">9:00 - 18:00</p>
             </div>
 
             <div class="line-hours">
-                <p id="day">Samedi</p>
-                <p id="hour">9:00 - 18:00</p>
+                <p class="day">Samedi</p>
+                <p class="hour">9:00 - 18:00</p>
             </div>
 
             <div class="line-hours">
-                <p id="day">Dimanche</p>
-                <p id="hour">Fermé</p>
+                <p class="day">Dimanche</p>
+                <p class="hour">Fermé</p>
             </div>
 
         </div>
