fix: font error

--- a/products.html
+++ b/products.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Product Popup -->
     <section class="product-page">
         <div class="container">
             <div class="show-product">
