--- a/products.html
+++ b/products.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'Atelier 12</title>
     <link href="/css/products.css" rel="stylesheet">
     <link href="/css/global.css" rel="stylesheet">
+    <link href="/image/favicon.png" rel="icon">
 </head>
 
 <body>
