--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="all-screen">
+    <section class="landingpage">
         <!-- Header -->
         <header id="header-index">
             <img src="/image/atelier-logo.svg" alt="Logo Atelier">
@@ -21,13 +21,15 @@
 
         <!-- Section presentation shop -->
         <section class="presentation">
-            <div class="presentation-textes">
-                <h1>À propos</h1>
-                <p>Situé au cœur du <span class="violet">5ème arrondissement</span> et à deux pas du Jardin des plantes, le salon L’Atelier à vu le jour en février 2011.</p>
-                <p>Ici, un conseil et une prestation de coiffure de qualité pour tous types de cheveux, le tout dans une ambiance des plus <span class="violet">conviviales.</span></p>
-                <p>L’ Atelier travaille avec la gamme <span class="violet">L’Oréal</span> et <span class="violet">Sublimo</span>.</p>
+            <div id="presentation-container">
+                <div class="presentation-texts">
+                    <h1>À propos</h1>
+                    <p>Situé au cœur du <span class="violet">5ème arrondissement</span> et à deux pas du Jardin des plantes, le salon L’Atelier à vu le jour en février 2011.</p>
+                    <p>Ici, un conseil et une prestation de coiffure de qualité pour tous types de cheveux, le tout dans une ambiance des plus <span class="violet">conviviales.</span></p>
+                    <p>L’ Atelier travaille avec la gamme <span class="violet">L’Oréal</span> et <span class="violet">Sublimo</span>.</p>
+                </div>
+                <img class="picture" src="/image/tests.png" alt="Photo de l'Atelier">
             </div>
-            <img class="picture" src="/image/tests.png" alt="Photo de l'Atelier">
         </section>
     </section>
 
@@ -223,7 +225,7 @@
     </div>
     
 
-    <!-- Avis -->
+    <!-- Reviews -->
     <section>
         <h1>Avis</h1>
         <div class="block">
@@ -235,7 +237,7 @@
                 <img src="/image/icon/star.svg">
                 <img src="/image/icon/star.svg">
             </div>
-            <p class="comment"> <span class="apostrophe">“ </span><span class="apostrophe"> “</span></p>
+            <p class="comment"> </p>
             
         </div>
         <div class="carousel">
