--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                     <p>Ici, un conseil et une prestation de coiffure de qualité pour tous types de cheveux, le tout dans une ambiance des plus <span class="violet">conviviales.</span></p>
                     <p>L’ Atelier travaille avec la gamme <span class="violet">L’Oréal</span> et <span class="violet">Sublimo</span>.</p>
                 </div>
-                <img class="picture" src="/image/tests.png" alt="Photo de l'Atelier">
+                <div id="size-pic">
+                    <img class="picture" src="/image/shop.webp" alt="Photo de l'Atelier">
+                </div>
             </div>
         </section>
     </section>
@@ -97,14 +99,12 @@
             </div>
 
             <br>
-            <br>
 
             <div class="line">
                 <p class="name">Flash</p>
                 <p class="price">19 € / 29 €</p>
             </div>
 
-            <br>
             <br>
 
             <div class="line">
@@ -124,7 +124,6 @@
                 <p class="price">48 € / 62 € / 72 €</p>
             </div>
 
-            <br>
             <br>
 
             <div class="line">
@@ -207,6 +206,7 @@
     </section>
 
     <!-- Products -->
+    <h1 class="h1-space">Produits</h1>
     <section class="products">
         <template id="product">
             <a class="product" href="products.html">
@@ -227,7 +227,7 @@
 
     <!-- Reviews -->
     <section>
-        <h1>Avis</h1>
+        <h1 class="h1-space">Avis</h1>
         <div class="block">
             <div class="avis">
                 <p id="name"></p>
@@ -237,7 +237,7 @@
                 <img src="/image/icon/star.svg">
                 <img src="/image/icon/star.svg">
             </div>
-            <p class="comment"> </p>
+            <p class="comment"></p>
             
         </div>
         <div class="carousel">
