fix: css bug for responsive (1024px)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <!-- Prices -->
-    <section>
+    <section class="prices">
         <h1>Prix</h1>
         <div class="choices">
             <button class="active" id="women">Femme</button>
@@ -210,7 +210,9 @@
     <section class="products">
         <template id="product">
             <a class="product" href="products.html">
-                <img id="product-image" src="" alt="Produit">
+                <div class="image-container">
+                    <img id="product-image" src="" alt="Produit">
+                </div>
                 <div class="line-product">
                     <p id="brand-product"></p>
                     <p id="price-product"></p>
