--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
             
         </div>
         <div class="carousel">
-            <button class="carousel-button" id="button-0" onclick="getComment(0)"></button>
-            <button class="carousel-button" id="button-1" onclick="getComment(1)"></button>
-            <button class="carousel-button" id="button-2" onclick="getComment(2)"></button>
-            <button class="carousel-button" id="button-3" onclick="getComment(3)"></button>
-            <button class="carousel-button" id="button-4" onclick="getComment(4)"></button>
+            <img class="carousel-button" id="button-0" onclick="getComment(0)" src='/image/icon/caroussel-circle-violet.svg'>
+            <img class="carousel-button" id="button-1" onclick="getComment(1)" src='/image/icon/caroussel-circle.svg'>
+            <img class="carousel-button" id="button-2" onclick="getComment(2)" src='/image/icon/caroussel-circle.svg'>
+            <img class="carousel-button" id="button-3" onclick="getComment(3)" src='/image/icon/caroussel-circle.svg'>
+            <img class="carousel-button" id="button-4" onclick="getComment(4)" src='/image/icon/caroussel-circle.svg'>
         </div>
 
     </section>
