--- a/products.html
+++ b/products.html
@@ -68,10 +68,10 @@
     <!-- Products -->
     <section class="products">
         <template id="product" >
-            <div class="product">
+            <div class="product" onclick="productPage(this.id)">
                 <img id="product-image" src="" alt="Produit">
                 <div class="line-product">
-                    <p id="brand-product"></p>
+                    <p id="brand-product">L'Oréal</p>
                     <p id="price-product"></p>
                 </div>
                 <p class="describe" id="describe1"></p>
