fix: responsive index/products

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <img id="product-image" src="" alt="Produit">
                 </div>
                 <div class="line-product">
-                    <p id="brand-product"></p>
+                    <p id="brand-product">L'Oréal</p>
                     <p id="price-product"></p>
                 </div>
                 <p class="describe" id="describe1"></p>
@@ -312,6 +312,7 @@
         </div>
     </footer>
 </body>
+<script src="/js/global.js"></script>
 <script src="/js/index.js"></script>
 
 </html>
