--- a/products.html
+++ b/products.html
@@ -91,5 +91,7 @@
         </div>
     </footer>
 </body>
-<script src="/js/products.js"> </script> 
+<script src="/js/product-page.js"> </script> 
+<script src="/js/global.js"> </script> 
+
 </html>
