feat: add responsive product page

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
     </footer>
 </body>
-<script src="/js/global.js"></script>
+<script src="/js/product.js"></script>
 <script src="/js/index.js"></script>
 
 </html>
