--- a/products.html
+++ b/products.html
@@ -91,7 +91,6 @@
         </div>
     </footer>
 </body>
-<script src="/js/product-page.js"> </script> 
-<script src="/js/global.js"> </script> 
+<script src="/js/product.js"> </script> 
 
 </html>
