fix: products description

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Le salon de coiffure L'Atelier est situé au cœur du 5ème arrondissement de Paris. Conseil et prestation de qualité, le tout dans une ambiance des plus conviviales. L'achat de produits est possible en magasin.">
     <link href="/css/global.css" rel="stylesheet">
     <link href="/css/index.css" rel="stylesheet">
     <link href="/image/favicon.png" rel="icon">
-
-    <title>L'Atelier 12</title>
+    <title>Salon de coiffure L'Atelier 12</title>
 </head>
 
 <body>
@@ -312,7 +312,7 @@
         </div>
     </footer>
 </body>
-<script src="/js/product.js"></script>
+<script src="/js/products.js"></script>
 <script src="/js/index.js"></script>
 
 </html>
