--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'Atelier 12</title>
+    <title>Salon de coiffure L'Atelier 12</title>
     <link href="/css/global.css" rel="stylesheet">
     <link href="/css/products.css" rel="stylesheet">
     <link href="/image/favicon.png" rel="icon">
@@ -91,6 +91,8 @@
         </div>
     </footer>
 </body>
-<script src="/js/product.js"> </script> 
+<script src="/js/products.js"> </script> 
+<script src="/js/filters.js"> </script> 
+
 
 </html>
