--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
                         <p id="show-quantity"></p>
                     </div>
                     <p>Produits uniquement disponibles en achat en magasin</p>
-                    <button id="cross"></button>
+                    <img src='image/icon/close.svg' id="cross">
                 </div>
             </div>
         </div>
