--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
                         <p id="show-price"></p>
                         <p id="show-quantity"></p>
                     </div>
-                    <p>Produits uniquement disponibles en achat en magasin</p>
+                    <p id="buy">Produits uniquement disponibles en achat en magasin</p>
                     <img src='image/icon/close.svg' id="cross">
                 </div>
             </div>
