feat: add products

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="presentation-container">
                 <div class="presentation-texts">
                     <h1>À propos</h1>
-                    <p>Situé au cœur du <span class="violet">5ème arrondissement</span> et à deux pas du Jardin des plantes, le salon L’Atelier à vu le jour en février 2011.</p>
+                    <p>Situé au cœur du <span class="violet">5ème arrondissement</span> et à deux pas du Jardin des plantes, le salon L’Atelier a vu le jour en février 2011.</p>
                     <p>Ici, un conseil et une prestation de coiffure de qualité pour tous types de cheveux, le tout dans une ambiance des plus <span class="violet">conviviales.</span></p>
                     <p>L’ Atelier travaille avec la gamme <span class="violet">L’Oréal</span> et <span class="violet">Sublimo</span>.</p>
                 </div>
