--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/css/global.css" rel="stylesheet">
     <link href="/css/index.css" rel="stylesheet">
     <link href="/image/favicon.png" rel="icon">
-    <title>Salon de coiffure L'Atelier 12</title>
+    <title>Salon de coiffure L'Atelier 12 - Paris 5ème</title>
 </head>
 
 <body>
